Elementos centralizados, imagens para ilustrar

--- a/src/index.html
+++ b/src/index.html
@@ -6,8 +6,8 @@
         <link href="https://fonts.googleapis.com/css2?family=Lato&family=Noto+Sans+JP&family=Open+Sans&family=Roboto:wght@100;300&display=swap" rel="stylesheet">
     </head>
     <body>
-        <div class="container">
-            <button class="button" onclick="window.location.href='cadastrousuario.html'"><span>Cadastrar Usuario</span></button>
+        <div class="container indexContainer">
+            <button class="button " onclick="window.location.href='cadastrousuario.html'"><span>Cadastrar Usuario</span></button>
             <button class="button" onclick="window.location.href='cadastrovacina.html'"><span>Cadastrar Vacina</span></button>
         </div>
     </body>
