--- a/src/cadastrousuario.html
+++ b/src/cadastrousuario.html
@@ -6,6 +6,7 @@
         <link href="https://fonts.googleapis.com/css2?family=Lato&family=Noto+Sans+JP&family=Open+Sans&family=Roboto:wght@100;300&display=swap" rel="stylesheet">
     </head>
     <body>
+        <img src="rsc/new-user.svg" alt="Novo usuario">
         <form class="container">
             <label>Nome completo:</label>
             <input type="text" id="nomeCompleto" name="nomeCompleto" class="formsInput"><br>
