--- a/src/cadastrovacina.html
+++ b/src/cadastrovacina.html
@@ -6,6 +6,7 @@
         <link href="https://fonts.googleapis.com/css2?family=Lato&family=Noto+Sans+JP&family=Open+Sans&family=Roboto:wght@100;300&display=swap" rel="stylesheet">
     </head>
     <body>
+        <img src="rsc/syringe.svg" alt="Novo cadastro de vacinação">
         <form class="container">
             <label>Nome da vacina:</label>
             <input type="text" id="nomeVacina" name="nomeVacina" class="formsInput"><br>
