--- a/src/cadastrousuario.html
+++ b/src/cadastrousuario.html
@@ -1,6 +1,7 @@
 <html>
     <head>
         <title>Cadastro de Usuario</title>
+        <script src="functions.js"></script>
         <link rel="stylesheet" href="styles.css">
         <link rel="preconnect" href="https://fonts.gstatic.com">
         <link href="https://fonts.googleapis.com/css2?family=Lato&family=Noto+Sans+JP&family=Open+Sans&family=Roboto:wght@100;300&display=swap" rel="stylesheet">
@@ -9,14 +10,14 @@
         <img src="rsc/new-user.svg" alt="Novo usuario">
         <form class="container">
             <label>Nome completo:</label>
-            <input type="text" id="nomeCompleto" name="nomeCompleto" class="formsInput"><br>
+            <input type="text" id="nomeCompleto" name="nomeCompleto" class="formsInput" required minlength="6"><br>
             <label>E-mail:</label>
-            <input type="email" id="email" name="email" class="formsInput"><br>
+            <input type="email" id="email" name="email" class="formsInput" required><br>
             <label>CPF:</label>
-            <input type="text" id="cpf" name="cpf" class="formsInput"><br>
+            <input type="number" id="cpf" name="cpf" class="formsInput" required><br>
             <label>Data de Nascimento:</label>
-            <input type="date" id="dataDeNascimento" name="dataDeNascimento" class="formsInput"><br>
-            <input type="submit" id="enviar" name="enviar" value="Enviar" class="button">
+            <input type="date" id="dataDeNascimento" name="dataDeNascimento" class="formsInput" required><br>
+            <input type="button" id="enviar" name="enviar" value="Enviar" class="button">
         </form>
     </body>
 </html>
