--- a/src/cadastrovacina.html
+++ b/src/cadastrovacina.html
@@ -9,12 +9,12 @@
         <img src="rsc/syringe.svg" alt="Novo cadastro de vacinação">
         <form class="container">
             <label>Nome da vacina:</label>
-            <input type="text" id="nomeVacina" name="nomeVacina" class="formsInput"><br>
+            <input type="text" id="nomeVacina" name="nomeVacina" class="formsInput" required minlength=6><br>
             <label>E-mail:</label>
-            <input type="email" id="email" name="email" class="formsInput"><br>
+            <input type="email" id="email" name="email" class="formsInput" required ><br>
             <label>Data de aplicação:</label>
-            <input type="datetime-local" id="dataDeAplicacao" name="dataDeAplicacao" class="formsInput"><br>
-            <input type="submit" id="enviar" name="enviar" value="Enviar" class="button">
+            <input type="datetime-local" id="dataDeAplicacao" name="dataDeAplicacao" class="formsInput" required><br>
+            <input type="button" id="enviar" name="enviar" value="Enviar" class="button">
         </form>
     </body>
 </html>
