--- a/src/index.html
+++ b/src/index.html
@@ -1,14 +1,15 @@
 <html>
     <head>
         <title>Pagina Principal</title>
+        <script src="functions.js"></script>
         <link rel="stylesheet" href="styles.css">
         <link rel="preconnect" href="https://fonts.gstatic.com">
         <link href="https://fonts.googleapis.com/css2?family=Lato&family=Noto+Sans+JP&family=Open+Sans&family=Roboto:wght@100;300&display=swap" rel="stylesheet">
     </head>
     <body>
         <div class="container indexContainer">
-            <button class="button " onclick="window.location.href='cadastrousuario.html'"><span>Cadastrar Usuario</span></button>
-            <button class="button" onclick="window.location.href='cadastrovacina.html'"><span>Cadastrar Vacina</span></button>
+            <button class="button " onclick=acessarCadastroUsuario()><span>Cadastrar Usuario</span></button>
+            <button class="button" onclick=acessarCadastroVacina()><span>Cadastrar Vacina</span></button>
         </div>
     </body>
 </html>
